# tulware-scanner

./: .gitignore  CMakeLists.txt  README.md  main.c  malware.data  tulware-scanner
files-to-scan/: pan-tadeusz.txt  some_text_file.txt
files-to-scan/folder_1/: malware.txt
files-to-scan/folder_1/folder_2/: wirus.txt
